--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Exo+2:wght@100&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Frijole&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Sirin+Stencil&display=swap");
     </style>
   </head>
   <body>
