modify responsive and person page

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Tai Center Bellreguard</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="tai-center.ico" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Frijole&display=swap");
       @import url("https://fonts.googleapis.com/css2?family=Sirin+Stencil&display=swap");
